nginx-webserver.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nginx-webserver
  labels:
    app: nginx

spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
