nodeport-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: nodeportservice
  labels:
    run: nodeportservice

spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
