nginx-webserver-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress

metadata:
  name: "nginx-webserver"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: nginx

spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "nodeportservice"
              servicePort: 80
